Replace "Drucksachen" with "Vorlagen" and implement year filtering
Renamed routes, components, and links from "Drucksachen" to "Vorlagen" for consistency. Added dynamic pages to filter and display documents by year, improving navigation and content organization. Updated navigation layout and links to reflect these changes.

--- a/src/components/PapersTable.astro
+++ b/src/components/PapersTable.astro
@@ -111,7 +111,7 @@ const formatDate = (dateString: string | undefined): string => {
       const parent = (event.target as HTMLElement)
         ?.parentElement as HTMLElement;
 
-      window.location.href = `reference/${parent.id}`;
+      window.location.href = `vorlage/${parent.id}`;
     });
   });
 </script>
