--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -62,7 +62,7 @@
     <nav>
       <ul>
         <li><a href="/karlsruhe-oparl-viewer/">GemeinderatsRadar</a></li>
-        <li><a href="/karlsruhe-oparl-viewer/drucksachen">Drucksachen</a></li>
+        <li><a href="/karlsruhe-oparl-viewer/vorlagen2025">Vorlagen</a></li>
         <li>
           <a
             href="https://sitzungskalender.karlsruhe.de/db/ratsinformation/start"
