Handle optional chaining for auxiliaryFiles array check.
Added optional chaining to prevent potential runtime errors when auxiliaryFiles is undefined or null. This ensures safer access and improves code reliability.

--- a/src/components/AuxiliaryFiles.astro
+++ b/src/components/AuxiliaryFiles.astro
@@ -30,7 +30,7 @@ const formattedDate = (date: string) => {
   <h2 class="section-heading">Zusätzliche Dateien</h2>
 
   {
-    auxiliaryFiles.length > 0 ? (
+    auxiliaryFiles?.length > 0 ? (
       <ul class="file-list">
         {auxiliaryFiles.map((file) => {
           const fileText =
@@ -70,7 +70,9 @@ const formattedDate = (date: string) => {
                 Text anzeigen
               </button>
               <div class="file-text-wrapper" hidden>
-                <p class="file-text">{fileText}</p>
+                <p data-pagefind-ignore class="file-text">
+                  {fileText}
+                </p>
               </div>
             </li>
           );
