Add sorting functionality and improve data attributes
Introduce sorting by date to the UI options and enhance sorting accessibility with `data-pagefind-sort` attributes. Refactor redundant markup for clarity in the AuxiliaryFiles component.

--- a/src/components/AuxiliaryFiles.astro
+++ b/src/components/AuxiliaryFiles.astro
@@ -70,9 +70,7 @@ const formattedDate = (date: string) => {
                 Text anzeigen
               </button>
               <div class="file-text-wrapper" hidden>
-                <p data-pagefind-ignore class="file-text">
-                  {fileText}
-                </p>
+                <p class="file-text">{fileText}</p>
               </div>
             </li>
           );
