--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,9 @@ import Search from "astro-pagefind/components/Search";
 const uiOptions = {
   showImages: false,
   pageSize: 10,
+  sort: {
+    date: "dsc",
+  },
   translations: {
     placeholder: "Suchen",
     clear_search: "Löschen",
