--- a/src/pages/vorlagen[year].astro
+++ b/src/pages/vorlagen[year].astro
@@ -4,10 +4,23 @@ import PapersTable from "../components/PapersTable.astro";
 import { PapersStore } from "../shared/stores/papers-store";
 import type { Paper } from "../shared/types/paper";
 
+export const bulkModifiedDate = "2025-03-03";
+
+export function getRelevantYear(paper: Paper) {
+  if (paper.modified.slice(0, bulkModifiedDate.length) === bulkModifiedDate) {
+    return paper.date.slice(0, 4);
+  }
+  return paper.modified.slice(0, 4);
+}
+
 export async function getAllAvailableYears() {
   const papers = await PapersStore.getInstance().getAllPapers();
   return Array.from(
-    new Set(papers.map((paper) => paper.modified.slice(0, 4))),
+    new Set(
+      papers.map((paper) => {
+        return getRelevantYear(paper);
+      }),
+    ),
   ).sort();
 }
 
@@ -23,7 +36,7 @@ export async function getStaticPaths() {
 let papers: Paper[] = [];
 try {
   papers = await PapersStore.getInstance().getAllPapers();
-  papers = papers.filter((paper) => paper.modified.includes(year));
+  papers = papers.filter((paper) => getRelevantYear(paper).includes(year));
 } catch (error) {
   console.error("Error fetching papers:", error);
 }
